--- a/src/main/resources/assets/remcraft/lang/en_us.json
+++ b/src/main/resources/assets/remcraft/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.remcraft.sapphire": "Sapphire",
   "item.remcraft.raw_sapphire": "Raw Sapphire",
 
+  "item.remcraft.metal_detector": "Metal Detector",
+
   "block.remcraft.sapphire_block": "Sapphire Block",
   "block.remcraft.raw_sapphire_block": "Raw Sapphire Block",
 
