--- a/src/main/resources/assets/remcraft/lang/en_us.json
+++ b/src/main/resources/assets/remcraft/lang/en_us.json
@@ -9,8 +9,10 @@
 
   "block.remcraft.sapphire_ore": "Sapphire Ore",
   "block.remcraft.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
-    "block.remcraft.nether_sapphire_ore": "Nether Sapphire Ore",
+  "block.remcraft.nether_sapphire_ore": "Nether Sapphire Ore",
   "block.remcraft.end_sapphire_ore": "End Sapphire Ore",
+
+  "block.remcraft.gem_polishing_station": "Gem Polishing Station",
 
   "creativetab.remcraft_tab": "Remcraft Tab"
 }
