--- a/src/main/resources/assets/remcraft/lang/en_us.json
+++ b/src/main/resources/assets/remcraft/lang/en_us.json
@@ -13,6 +13,7 @@
   "block.remcraft.end_sapphire_ore": "End Sapphire Ore",
 
   "block.remcraft.gem_polishing_station": "Gem Polishing Station",
+  "block.remcraft.computer": "Computer",
 
   "creativetab.remcraft_tab": "Remcraft Tab"
 }
