New AdvanceComputerBlock with working commands

--- a/src/main/resources/assets/remcraft/lang/en_us.json
+++ b/src/main/resources/assets/remcraft/lang/en_us.json
@@ -14,6 +14,7 @@
 
   "block.remcraft.gem_polishing_station": "Gem Polishing Station",
   "block.remcraft.computer": "Computer",
+  "block.remcraft.advanced_computer": "Advanced Computer",
 
   "creativetab.remcraft_tab": "Remcraft Tab"
 }
